--- a/2_hotcoldspots.Rmd
+++ b/2_hotcoldspots.Rmd
@@ -1,12 +1,23 @@
 satisfaction coldspot
 ```{r, echo=FALSE}
+library(raster)
+library('rasterVis')
+library(png)
+library(RColorBrewer)
+library(sp)
+library(spdep)
+library(geosphere)
+library(ggplot2)
+library(ggpubr)
+library("viridis") 
 #tutorial from: https://rpubs.com/quarcs-lab/spatial-autocorrelation
 
 radius_of_hotcoldspots <- 100
 
 #read data
 library(readr)
-expmapdf <- read_csv("D:/Datamost/ExperienceMapsDataset_over2.csv", guess_max = 100000)
+expmapdf <- read_csv("D:/Datamost/ExperienceMapsDataset_over2.csv", guess_max = 100000)#studyarea
+expmapdf <- subset(expmapdf,!is.na(Longitude))#neu 3.5.
 
 fpafod_satis <- subset(expmapdf, !is.na(satisfaction_journey_xs));
 fpafod_satis_geo <- fpafod_satis;
